middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: openrag-openarchiver-connector-redirect-https
  labels:
    app.kubernetes.io/name: openrag-openarchiver-connector
    app.kubernetes.io/part-of: openrag
spec:
  redirectScheme:
    scheme: https
    permanent: true
